[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Menu/BoxMenu/BoxMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resource/Theme/BoxMenu.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/Gui/ConfirmationMenu/ConfirmationMenu.gd" type="Script" id=3]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=1]
resource_name = "open"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.28, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}

[node name="ConfirmationMenu" type="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.5
margin_top = -33.5
margin_right = 58.5
margin_bottom = 33.5
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="NinePatchRect" parent="." instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
rect_pivot_offset = Vector2( 58, 33 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 3.0
margin_right = 77.0
margin_bottom = 17.0
text = "Are you sure?"

[node name="YesButton" type="Button" parent="Control"]
margin_left = 30.0
margin_top = 26.0
margin_right = 51.0
margin_bottom = 41.0
text = "Yes"

[node name="NoButton" type="Button" parent="Control"]
margin_left = 67.0
margin_top = 26.0
margin_right = 88.0
margin_bottom = 41.0
text = "No"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/open = SubResource( 1 )

[connection signal="pressed" from="Control/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="Control/NoButton" to="." method="_on_NoButton_pressed"]
